# pygenstr

./: .CurrentChangelog.md  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml
src/genstr/: __init__.py  __main__.py  utils.py
tests/: test_mode_1.py  test_mode_2.py  test_mode_3.py  test_mode_4.py  test_mode_5.py  test_mode_6.py  test_mode_7.py  test_mode_8.py
